--- a/CC150/Ch 1. Array and Strings/1.1 Unique.md
+++ b/CC150/Ch 1. Array and Strings/1.1 Unique.md
@@ -3,11 +3,10 @@
 
 ### linear time solution
 
-***based on the size of character set, we decide the size of array.    
+**based on the size of character set, we decide the size of array.    
 if it is ASCII, the size is 256.   
 if it is only lowercase character, the size is 26.    
-The time complexity is O(n).    
-*** 
+The time complexity is O(n).** 
 
 
 ```java
@@ -29,6 +28,6 @@ class Solution {
 
 ## follow up
 
-1. [387](https://leetcode.com/problems/first-unique-character-in-a-string/) [First Unique Character in a String.](https://github.com/Ssuperfrank/Codes/tree/master/String/First%20Unique%20Character%20in%20a%20String)    
-2. [451](https://leetcode.com/problems/sort-characters-by-frequency/) [Sort Characters By Frequency.](https://github.com/Ssuperfrank/Codes/tree/master/String/Sort%20Characters%20By%20Frequency)
+1. [387](https://leetcode.com/problems/first-unique-character-in-a-string/) [First Unique Character in a String.](https://github.com/Ssuperfrank/Codes/tree/master/String/First%20Unique%20Character%20in%20a%20String.md)    
+2. [451](https://leetcode.com/problems/sort-characters-by-frequency/) [Sort Characters By Frequency.](https://github.com/Ssuperfrank/Codes/blob/master/String/Sort%20Characters%20By%20Frequency.md)
 
