--- a/CC150/Ch 1. Array and Strings/1.1 Unique.md
+++ b/CC150/Ch 1. Array and Strings/1.1 Unique.md
@@ -1,5 +1,5 @@
 ## CC 1.1
->> Implement an algorithm to determine if a string has ***all unique*** characters. What if you can not use additional data structures?
+> Implement an algorithm to determine if a string has ***all unique*** characters. What if you can not use additional data structures?
 
 ### linear time solution
 
