--- a/CC150/Ch 1. Array and Strings/1.1 Unique.md
+++ b/CC150/Ch 1. Array and Strings/1.1 Unique.md
@@ -6,6 +6,7 @@
 **based on the size of character set, we decide the size of array.    
 if it is ASCII, the size is 256.   
 if it is only lowercase character, the size is 26.    
+declare a array to record all character, and if the letter has been recorded, mark as true, otherwise, the string is not unique.    
 The time complexity is O(n).** 
 
 
@@ -28,6 +29,6 @@ class Solution {
 
 ## follow up
 
-1. [387](https://leetcode.com/problems/first-unique-character-in-a-string/) [First Unique Character in a String.](https://github.com/Ssuperfrank/Codes/tree/master/String/First%20Unique%20Character%20in%20a%20String.md)    
-2. [451](https://leetcode.com/problems/sort-characters-by-frequency/) [Sort Characters By Frequency.](https://github.com/Ssuperfrank/Codes/blob/master/String/Sort%20Characters%20By%20Frequency.md)
+1. [Leetcode 387](https://leetcode.com/problems/first-unique-character-in-a-string/) [First Unique Character in a String.](https://github.com/Ssuperfrank/Codes/tree/master/String/First%20Unique%20Character%20in%20a%20String.md)    
+2. [Leetcode 451](https://leetcode.com/problems/sort-characters-by-frequency/) [Sort Characters By Frequency.](https://github.com/Ssuperfrank/Codes/blob/master/String/Sort%20Characters%20By%20Frequency.md)
 
