--- a/CC150/Ch 1. Array and Strings/1.2 Check_Permutation.md
+++ b/CC150/Ch 1. Array and Strings/1.2 Check_Permutation.md
@@ -2,7 +2,7 @@
 
 > Write a method to decide if two strings are anagrams or not.    
 
-Same as the [242. Valid Anagram](https://leetcode.com/problems/valid-anagram/)
+Same as the [Leetcode 242. Valid Anagram](https://leetcode.com/problems/valid-anagram/)
 
 **Assumed that the string is unicode**
 
@@ -51,8 +51,8 @@ class Solution {
 ```
 
 #### follow up
-1. [266](https://leetcode.com/problems/palindrome-permutation/) [Palindrome Permutation](https://github.com/Ssuperfrank/Codes/blob/master/String/Anagram.md#266-palindrome-permutation)
-2. [49](https://leetcode.com/problems/group-anagrams/) [Group Anagrams](https://github.com/Ssuperfrank/Codes/blob/master/String/Anagram.md#49-group-anagrams)
-3. [760](https://leetcode.com/problems/find-anagram-mappings/) [Find Anagram Mappings](https://github.com/Ssuperfrank/Codes/blob/master/String/Anagram.md#760-find-anagram-mappings)
-4. [438](https://leetcode.com/problems/find-all-anagrams-in-a-string/) [Find All Anagrams in a String](https://github.com/Ssuperfrank/Codes/blob/master/String/Anagram.md#438-find-all-anagrams-in-a-string)
+1. [Leetcode 266](https://leetcode.com/problems/palindrome-permutation/) [Palindrome Permutation](https://github.com/Ssuperfrank/Codes/blob/master/String/Anagram.md#266-palindrome-permutation)
+2. [Leetcode 49](https://leetcode.com/problems/group-anagrams/) [Group Anagrams](https://github.com/Ssuperfrank/Codes/blob/master/String/Anagram.md#49-group-anagrams)
+3. [Leetcode 760](https://leetcode.com/problems/find-anagram-mappings/) [Find Anagram Mappings](https://github.com/Ssuperfrank/Codes/blob/master/String/Anagram.md#760-find-anagram-mappings)
+4. [Leetcode 438](https://leetcode.com/problems/find-all-anagrams-in-a-string/) [Find All Anagrams in a String](https://github.com/Ssuperfrank/Codes/blob/master/String/Anagram.md#438-find-all-anagrams-in-a-string)
 
