--- a/CC150/Ch 1. Array and Strings/1.3 Remove_duplicate.md
+++ b/CC150/Ch 1. Array and Strings/1.3 Remove_duplicate.md
@@ -112,7 +112,7 @@ class Solution {
 1. 	[Leetcode 217](https://leetcode.com/problems/contains-duplicate/)
 	[Leetcode 219](https://leetcode.com/problems/contains-duplicate-ii/)
 	[Leetcode 220](https://leetcode.com/problems/contains-duplicate-iii/)  
-	[Contains Duplicate]()
+	[Contains Duplicate](https://github.com/Ssuperfrank/Codes/blob/master/Array/Contains%20Duplicate.md)
 
 2. [Leetcode 287](https://leetcode.com/problems/find-the-duplicate-number/)  [Find the Duplicate Number](https://github.com/Ssuperfrank/Codes/blob/master/Array/Find%20Numbers%20Disappeared.md#287-find-the-duplicate-number)
 
