--- a/CC150/Ch 1. Array and Strings/1.4 Rotate_matrix.md
+++ b/CC150/Ch 1. Array and Strings/1.4 Rotate_matrix.md
@@ -4,9 +4,12 @@ Example:
 > 1 2 3 4   
 5 6 7 8   
 9 10 11 12    
-13 14 15 16    
+> 13 14 15 16    
 After =>     
-4 8 12 16    
+> 4 8 12 16    
 3 7 11 15    
 2 6 10 14    
-> 1 5 9  13     
+> 1 5 9 13     
+
+
+### rotate => exchange elements in place
