--- a/CC150/Ch 1. Array and Strings/1.4 Rotate_matrix.md
+++ b/CC150/Ch 1. Array and Strings/1.4 Rotate_matrix.md
@@ -1,3 +1,4 @@
+## Rotation for matrix
 > Given an image represented by an NxN matrix, where each pixel in the image is 4 bytes, write a method to rotate the image by 90 degrees. Can you do this in place?
 
 Example:    
@@ -11,5 +12,16 @@ After =>
 2 6 10 14    
 > 1 5 9 13     
 
+Same as the [Leetcode 48. Rotate Image](https://github.com/Ssuperfrank/Codes/blob/60894c344558e1702408d30d547d0b342bfed79f/Array/Rotate.md)
 
-### rotate => exchange elements in place
+
+## Rotation for string
+> Assume you have a method isSubstring which checks if one word is a substring of another. Given two strings, s1 and s2, write code to check if s2 is a rotation of s1 using only one call to isSubstring ( i.e., “waterbottle” is a rotation of “erbottlewat”).
+
+**rotation of string => "water"  (rotated by two character) => "terwa"**
+
+Same as the [Leetcode 796. Rotate Image](https://github.com/Ssuperfrank/Codes/blob/60894c344558e1702408d30d547d0b342bfed79f/Array/Rotate.md)
+
+
+## Follow up
+
