--- a/CC150/Ch 1. Array and Strings/1.4 Rotate_matrix.md
+++ b/CC150/Ch 1. Array and Strings/1.4 Rotate_matrix.md
@@ -12,7 +12,7 @@ After =>
 2 6 10 14    
 > 1 5 9 13     
 
-Same as the [Leetcode 48. Rotate Image](https://github.com/Ssuperfrank/Codes/blob/60894c344558e1702408d30d547d0b342bfed79f/Array/Rotate.md)
+Same as the [Leetcode 48. Rotate Image](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#48-rotate-image)
 
 
 ## Rotation for string
@@ -20,8 +20,9 @@ Same as the [Leetcode 48. Rotate Image](https://github.com/Ssuperfrank/Codes/blo
 
 **rotation of string => "water"  (rotated by two character) => "terwa"**
 
-Same as the [Leetcode 796. Rotate Image](https://github.com/Ssuperfrank/Codes/blob/60894c344558e1702408d30d547d0b342bfed79f/Array/Rotate.md)
+Same as the [Leetcode 796. Rotate Image](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#796-rotate-string)
 
 
 ## Follow up
-
+1. [189](https://leetcode.com/problems/rotate-array/) [Rotate Array](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#189-rotate-array)
+2. 
