--- a/CC150/Ch 1. Array and Strings/1.4 Rotate_matrix.md
+++ b/CC150/Ch 1. Array and Strings/1.4 Rotate_matrix.md
@@ -1,4 +1,4 @@
-## Rotation for matrix
+## 1.4 Rotation for matrix
 > Given an image represented by an NxN matrix, where each pixel in the image is 4 bytes, write a method to rotate the image by 90 degrees. Can you do this in place?
 
 Example:    
@@ -15,7 +15,7 @@ After =>
 Same as the [Leetcode 48. Rotate Image](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#48-rotate-image)
 
 
-## Rotation for string
+## 1.5 Rotation for string
 > Assume you have a method isSubstring which checks if one word is a substring of another. Given two strings, s1 and s2, write code to check if s2 is a rotation of s1 using only one call to isSubstring ( i.e., “waterbottle” is a rotation of “erbottlewat”).
 
 **rotation of string => "water"  (rotated by two character) => "terwa"**
@@ -25,4 +25,4 @@ Same as the [Leetcode 796. Rotate Image](https://github.com/Ssuperfrank/Codes/bl
 
 ## Follow up
 1. [189](https://leetcode.com/problems/rotate-array/) [Rotate Array](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#189-rotate-array)
-2. 
+2. [61](https://leetcode.com/problems/rotate-list/) [Rotate List](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#61-rotate-list)
