--- a/CC150/Ch 1. Array and Strings/1.5 Zero_matrix.md
+++ b/CC150/Ch 1. Array and Strings/1.5 Zero_matrix.md
@@ -1,3 +1,20 @@
+## 1.6 Zero Matrix
 > Write an algorithm such that if an element in an MxN matrix is 0, its entire row and column is set to 0.
 
-### record location of 0 element
+Same as the [73. Set Matrix Zeroes](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#48-rotate-image)      
+
+Example 1:      
+> Input:       
+[      
+  [1,1,1],      
+  [1,0,1],      
+  [1,1,1]      
+]      
+Output:       
+[      
+  [1,0,1],      
+  [0,0,0],      
+  [1,0,1]      
+> ]      
+
+
