--- a/CC150/Ch 1. Array and Strings/1.6 Zero_matrix.md
+++ b/CC150/Ch 1. Array and Strings/1.6 Zero_matrix.md
@@ -1,8 +1,6 @@
 ## 1.6 Zero Matrix
 > Write an algorithm such that if an element in an MxN matrix is 0, its entire row and column is set to 0.
 
-Same as the [73. Set Matrix Zeroes](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#48-rotate-image)      
-
 Example 1:      
 > Input:       
 [      
@@ -17,4 +15,9 @@ Output:
   [1,0,1]      
 > ]      
 
+Same as the [73. Set Matrix Zeroes](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#48-rotate-image)      
+
+
+### Follow up
+1. [289](https://leetcode.com/problems/game-of-life/) [Game of Life](https://github.com/Ssuperfrank/Codes/blob/master/Array/)
 
