--- a/CC150/Ch 1. Array and Strings/1.4&1.5 Rotate.md
+++ b/CC150/Ch 1. Array and Strings/1.4&1.5 Rotate.md
@@ -25,4 +25,5 @@ Same as the [Leetcode 796. Rotate Image](https://github.com/Ssuperfrank/Codes/bl
 
 ## Follow up
 1. [189](https://leetcode.com/problems/rotate-array/) [Rotate Array](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#189-rotate-array)
-2. [61](https://leetcode.com/problems/rotate-list/) [Rotate List](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#61-rotate-list)
+2. [788](https://leetcode.com/problems/rotated-digits/) [Rotated Digits](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#788-rotate-digits)
+3. [61](https://leetcode.com/problems/rotate-list/) [Rotate List](https://github.com/Ssuperfrank/Codes/blob/master/Array/Rotate.md#61-rotate-list)
