--- a/CC150/Ch 1. Array and Strings/1.6 Zero_matrix.md
+++ b/CC150/Ch 1. Array and Strings/1.6 Zero_matrix.md
@@ -19,5 +19,5 @@ Same as the [73. Set Matrix Zeroes](https://github.com/Ssuperfrank/Codes/blob/ma
 
 
 ### Follow up
-1. [289](https://leetcode.com/problems/game-of-life/) [Game of Life](https://github.com/Ssuperfrank/Codes/blob/master/Array/)
+1. [289](https://leetcode.com/problems/game-of-life/) [Game of Life](https://github.com/Ssuperfrank/Codes/blob/master/Array/Game%20of%20Life.md)
 
